[gd_scene load_steps=67 format=3 uid="uid://cou2lca40qdxl"]

[ext_resource type="Texture2D" uid="uid://pttpo6wfmcsq" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Character/Idle/Idle-Sheet.png" id="1_4ffj5"]
[ext_resource type="Script" uid="uid://dj0lg7bkycc4m" path="res://Scenes/Entities/Player/player.gd" id="1_rx582"]
[ext_resource type="Material" uid="uid://d1q7ddmemlsgn" path="res://Resources/Shaders/dash_material.tres" id="2_hkmxn"]
[ext_resource type="Texture2D" uid="uid://dq23t14l2g002" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Character/Attack-01/Attack-01-Sheet.png" id="2_i4twt"]
[ext_resource type="AudioStream" uid="uid://duv7ji3c4u2k" path="res://Assets/Sounds/Player/SwordLight.wav" id="2_mt20e"]
[ext_resource type="Script" uid="uid://cbljtbydq410e" path="res://Scenes/Components/hurt_box_component.gd" id="2_rx582"]
[ext_resource type="AudioStream" uid="uid://uw08k3mrv7am" path="res://Assets/Sounds/Player/Swordheavy.wav" id="3_50st8"]
[ext_resource type="Texture2D" uid="uid://cy6oa5058are5" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Character/Jump-Start/Jump-Start-Sheet.png" id="4_0fwr3"]
[ext_resource type="Texture2D" uid="uid://ilfgidbd63yk" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Character/Run/Run-Sheet.png" id="4_0yfgq"]
[ext_resource type="AudioStream" uid="uid://cgnibop2on1pj" path="res://Assets/Sounds/Player/Jump.wav" id="4_1ee1x"]
[ext_resource type="Texture2D" uid="uid://cnxobqfoxii6i" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Character/Jumlp-All/Jump-All-Sheet.png" id="4_p22ti"]
[ext_resource type="Script" uid="uid://bh04okmk0y7f" path="res://Scenes/Components/CoreAbilities/dodge_component.gd" id="4_y6hyn"]
[ext_resource type="Script" uid="uid://c60wdk640jber" path="res://Scenes/Components/CoreAbilities/dash_component.gd" id="5_75l7y"]
[ext_resource type="Texture2D" uid="uid://bm4ga3y8tn358" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Character/Jump-End/Jump-End-Sheet.png" id="5_hkmxn"]
[ext_resource type="AudioStream" uid="uid://ckvoh4tuq4mo2" path="res://Assets/Sounds/Player/Dash.wav" id="5_wl017"]
[ext_resource type="Script" uid="uid://b7pywml3u85jn" path="res://Scenes/Components/CoreAbilities/parry_component.gd" id="6_5o8lj"]
[ext_resource type="Script" uid="uid://x2gfe5eqhe3q" path="res://Scenes/Components/Movements/movement_component.gd" id="6_q8fdp"]
[ext_resource type="AudioStream" uid="uid://wm52ac2sks2g" path="res://Assets/Sounds/Player/Hurt.wav" id="6_sajyx"]
[ext_resource type="Script" uid="uid://dwn5s6v5no107" path="res://Scenes/Components/hit_box_component.gd" id="10_qtr04"]
[ext_resource type="Script" uid="uid://c0aresow0k4hg" path="res://Scenes/Components/WeaponAttack/attack_component.gd" id="15_hkmxn"]
[ext_resource type="Script" uid="uid://be13mnimdvrnm" path="res://Scenes/Entities/Player/player_health_component.gd" id="17_mt20e"]
[ext_resource type="PackedScene" uid="uid://72br7ke1iwip" path="res://Scenes/Components/camera_component.tscn" id="17_oedhw"]
[ext_resource type="Texture2D" uid="uid://d0hmafbkdemhd" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/RedFill.png" id="18_fd7sw"]
[ext_resource type="Texture2D" uid="uid://dmui46e8ib2q3" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/Fill.png" id="18_s4doi"]
[ext_resource type="Texture2D" uid="uid://pjrvsq6wmsi0" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/GreenFill.png" id="20_o25qk"]
[ext_resource type="Script" uid="uid://3v8t3ncv24s8" path="res://Scenes/Entities/Player/texture_progress_bar.gd" id="21_o25qk"]
[ext_resource type="AudioStream" uid="uid://cll3kril36r80" path="res://Assets/Sounds/happy_adveture.mp3" id="27_50st8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q8fdp"]
atlas = ExtResource("2_i4twt")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yfgq"]
atlas = ExtResource("2_i4twt")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fwr3"]
atlas = ExtResource("2_i4twt")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc8mt"]
atlas = ExtResource("2_i4twt")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p22ti"]
atlas = ExtResource("2_i4twt")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkmxn"]
atlas = ExtResource("2_i4twt")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtr04"]
atlas = ExtResource("2_i4twt")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oedhw"]
atlas = ExtResource("2_i4twt")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_22fhq"]
atlas = ExtResource("1_4ffj5")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcpig"]
atlas = ExtResource("1_4ffj5")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6hyn"]
atlas = ExtResource("1_4ffj5")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_75l7y"]
atlas = ExtResource("1_4ffj5")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d82u1"]
atlas = ExtResource("4_p22ti")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwgt"]
atlas = ExtResource("4_p22ti")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1342"]
atlas = ExtResource("4_p22ti")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4hte"]
atlas = ExtResource("5_hkmxn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xseyh"]
atlas = ExtResource("5_hkmxn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1kkw"]
atlas = ExtResource("5_hkmxn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fme60"]
atlas = ExtResource("4_0fwr3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb3ol"]
atlas = ExtResource("4_0fwr3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4n6s"]
atlas = ExtResource("4_0fwr3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy61i"]
atlas = ExtResource("4_0fwr3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4doi"]
atlas = ExtResource("2_i4twt")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6pm8"]
atlas = ExtResource("2_i4twt")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd7sw"]
atlas = ExtResource("2_i4twt")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o25qk"]
atlas = ExtResource("2_i4twt")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvxs1"]
atlas = ExtResource("2_i4twt")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr3lb"]
atlas = ExtResource("4_0yfgq")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5nyj"]
atlas = ExtResource("4_0yfgq")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dcmg"]
atlas = ExtResource("4_0yfgq")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt20e"]
atlas = ExtResource("4_0yfgq")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_50st8"]
atlas = ExtResource("4_0yfgq")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ee1x"]
atlas = ExtResource("4_0yfgq")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl017"]
atlas = ExtResource("4_0yfgq")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sajyx"]
atlas = ExtResource("4_0yfgq")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_5o8lj"]
animations = [{
"frames": [],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8fdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yfgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fwr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc8mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p22ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkmxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtr04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oedhw")
}],
"loop": false,
"name": &"heavy_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22fhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcpig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6hyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75l7y")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d82u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1342")
}],
"loop": false,
"name": &"in_air",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4hte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xseyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1kkw")
}],
"loop": false,
"name": &"jump_end",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fme60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb3ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4n6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy61i")
}],
"loop": false,
"name": &"jump_start",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4doi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6pm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd7sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o25qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvxs1")
}],
"loop": false,
"name": &"light_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr3lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5nyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dcmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt20e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50st8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ee1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl017")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sajyx")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hkmxn"]
radius = 30.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qtr04"]
radius = 13.0
height = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rx582"]
radius = 11.0
height = 50.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
texture_filter = 1
collision_mask = 134
script = ExtResource("1_rx582")
light_attack_audio = ExtResource("2_mt20e")
heavy_attack_audio = ExtResource("3_50st8")
jump_audio = ExtResource("4_1ee1x")
land_audio = ExtResource("4_1ee1x")
dash_audio = ExtResource("5_wl017")
hurt_audio = ExtResource("6_sajyx")
main_audio = ExtResource("27_50st8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = ExtResource("2_hkmxn")
sprite_frames = SubResource("SpriteFrames_5o8lj")
animation = &"idle"
autoplay = "idle"

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 16
collision_mask = 32
script = ExtResource("2_rx582")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://cbljtbydq410e"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_hkmxn")
debug_color = Color(0.865293, 0.305326, 0.480601, 0.42)

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 65600
script = ExtResource("10_qtr04")
hit_tags = Array[String]([])
metadata/_custom_type_script = "uid://dwn5s6v5no107"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_qtr04")
debug_color = Color(0.168627, 0.639216, 0.231373, 0.419608)

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_rx582")

[node name="MovementComponent" type="Node2D" parent="." node_paths=PackedStringArray("Player", "Jump_Buffer", "Animations_node")]
script = ExtResource("6_q8fdp")
Player = NodePath("..")
Jump_Buffer = NodePath("Jump_buffer")
Animations_node = NodePath("../AnimatedSprite2D")
metadata/_custom_type_script = "uid://x2gfe5eqhe3q"

[node name="Jump_buffer" type="Timer" parent="MovementComponent"]
wait_time = 0.25
one_shot = true

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("17_mt20e")
player = NodePath("..")
metadata/_custom_type_script = "uid://dlf30ooli6jr"

[node name="CoreAbilities" type="Node" parent="."]

[node name="DodgeComponent" type="Node" parent="CoreAbilities" node_paths=PackedStringArray("player", "sprite")]
script = ExtResource("4_y6hyn")
player = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")
metadata/_custom_type_script = "uid://bh04okmk0y7f"

[node name="DashComponent" type="Node" parent="CoreAbilities" node_paths=PackedStringArray("player", "sprite")]
script = ExtResource("5_75l7y")
player = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")
metadata/_custom_type_script = "uid://c60wdk640jber"

[node name="ParryComponent" type="Node" parent="CoreAbilities"]
script = ExtResource("6_5o8lj")
metadata/_custom_type_script = "uid://b7pywml3u85jn"

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("15_hkmxn")
light_attack_cooldown = 0.1
metadata/_custom_type_script = "uid://c0aresow0k4hg"

[node name="CameraComponent" parent="." instance=ExtResource("17_oedhw")]
position_smoothing_enabled = false

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="TextureProgressBar" type="TextureProgressBar" parent="HUD" node_paths=PackedStringArray("health_component")]
layout_mode = 0
offset_left = -32.0
offset_top = -40.0
offset_right = 32.0
offset_bottom = -24.0
texture_under = ExtResource("18_fd7sw")
texture_over = ExtResource("18_s4doi")
texture_progress = ExtResource("20_o25qk")
script = ExtResource("21_o25qk")
health_component = NodePath("../../HealthComponent")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
pitch_scale = 0.8

[node name="MainTheme" type="AudioStreamPlayer2D" parent="."]
